--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@
   width: 196px;
 }
 
-.nav__links {
+.nav__link:hover {
   /* Reset default list styles here */
   margin-top: 8px;
   list-style-type: none;
@@ -81,7 +81,7 @@
   box-sizing: border-box;
 }
 
-.header__link {
+.header__link:hover {
   color: #2f80ed;
   text-decoration: none;
 }
@@ -155,7 +155,7 @@
   margin: 40px 0 60px;
 }
 
-.events__more {
+.events__more:hover {
   margin-top: 60px;
   color: #2f80ed;
   text-decoration: none;
@@ -258,16 +258,15 @@
 }
 
 /* Add the CSS rule for your new class here. Make sure to place it before .card: parents should precede their children */
-.staff__card-list {
-  max-width: 760px;
-  margin-top: 68px;
+.staff__cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 40px;
-  list-style-type: none;
   justify-content: center;
-  padding: 0px;
-  margin: 68px 0px 0px 417px;
+  max-width: 760px;
+  margin: auto;
+  list-style: none;
+  gap: 40px;
+  padding-left: 0;
 }
 .card {
   background-color: #fff;
