--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,10 @@
 .page {
-  /* Add page class properties here */
   min-width: 1100px;
   max-width: 1600px;
+  margin: 0 auto;
   font-family: "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
-  margin: 0 auto;
 }
 
 .header {
@@ -20,23 +19,31 @@
 }
 
 .nav {
-  /* Add flex properties here */
   display: flex;
   justify-content: space-between;
-  margin-bottom: 0px;
+  align-items: center;
 }
 
 .logo {
   height: 60px;
   width: 196px;
+  align-items: center;
 }
 
 .nav__links {
-  /* Reset default list styles here */
-  margin-top: 8px;
-  list-style-type: none;
   display: flex;
+  align-items: center;
   column-gap: 20px;
+  list-style: none;
+  padding-left: 0;
+  margin-top: 8px;
+  margin-bottom: 0;
+}
+
+.nav__link {
+  color: #000000;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .nav__link:hover {
@@ -44,25 +51,24 @@
 }
 
 .header__title {
+  max-width: 544px;
   font-size: 66px;
   line-height: 76px;
   font-weight: 500;
-  max-width: 544px;
-  margin-top: 150px;
-  margin-bottom: 0px;
+  margin: 150px 0 0;
 }
 
 .header__description {
+  max-width: 465px;
   font-size: 20px;
   line-height: 30px;
-  max-width: 532px;
-  margin-top: 32px;
+  margin: 32px 0 0;
 }
 
 .header__image {
   z-index: 1;
-  position: absolute;
   max-width: 636px;
+  position: absolute;
   top: 135px;
   right: 20px;
 }
@@ -79,22 +85,95 @@
   box-sizing: border-box;
 }
 
-.header__link:hover {
+.header__link {
   color: #2f80ed;
   text-decoration: none;
 }
 
+.header__link:hover {
+  color: #1f69c9;
+}
 .header__address {
   margin: 0;
   color: #838383;
 }
+
+.staff {
+  padding-top: 100px;
+  padding-bottom: 140px;
+  background-color: #f2f2f2;
+}
+
+.staff__title {
+  text-align: center;
+  font-size: 44px;
+  line-height: 52px;
+  margin: 0 0 24px;
+}
+
+.staff__subtitle {
+  text-align: center;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
+  margin: 24px 0 68px;
+}
+
+.staff__cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 760px;
+  margin: auto;
+  list-style: none;
+  gap: 40px;
+  padding-left: 0;
+}
+
+.card {
+  width: 360px;
+  height: 420px;
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 32px 40px 20px 32px;
+  box-sizing: border-box;
+}
+
+.card__content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card__title {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.card__text {
+  margin: 20px 0 0;
+  font-size: 16px;
+  line-height: 24px;
+  overflow: scroll;
+}
+
+.card__footer {
+  margin: 0;
+  font-size: 14px;
+  line-height: 20px;
+  color: #838383;
+  margin-top: auto;
+}
+
 .events {
   padding: 100px 0 120px 80px;
   display: flex;
   align-items: start;
   justify-content: space-between;
   box-sizing: border-box;
-  background-color: #f2f2f2;
 }
 
 .events__content {
@@ -153,10 +232,14 @@
   margin: 40px 0 60px;
 }
 
-.events__more:hover {
+.events__more {
   margin-top: 60px;
   color: #2f80ed;
   text-decoration: none;
+}
+
+.events__more:hover {
+  color: #1f69c9;
 }
 
 .events__cover {
@@ -180,33 +263,28 @@
 }
 
 .person_name_feynman {
-  /* Use correct values of top/right/bottom/left properties to position the element */
   top: -30px;
   left: 319px;
 }
 
 .person_name_burbidge {
-  /* Use correct values of top/right/bottom/left properties to position the element */
   top: 96px;
   right: 125px;
 }
 
 .person_name_cannon {
-  /* Use correct values of top/right/bottom/left properties to position the element */
   right: 216px;
   bottom: 18px;
 }
 
 .person_name_mitchell {
-  /* Use correct values of top/right/bottom/left properties to position the element */
   left: 142px;
   bottom: 82px;
 }
 
 .person_name_tarter {
-  /* Use correct values of top/right/bottom/left properties to position the element */
-  left: 159px;
   top: 79px;
+  left: 159px;
 }
 
 .person__image {
@@ -230,80 +308,6 @@
   font-size: 14px;
   margin: 0;
 }
-.staff {
-  padding-top: 100px;
-  padding-bottom: 140px;
-  background-image: url(/images/staff_picks_background.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.staff__title {
-  text-align: center;
-  font-size: 44px;
-  line-height: 52px;
-  margin: 0 0 24px;
-  color: #fff;
-}
-
-.staff__subtitle {
-  text-align: center;
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 400;
-  margin: 24px 0 0;
-  color: #fff;
-}
-
-/* Add the CSS rule for your new class here. Make sure to place it before .card: parents should precede their children */
-.staff__cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 760px;
-  margin: auto;
-  list-style: none;
-  gap: 40px;
-  padding-left: 0;
-}
-.card {
-  background-color: #fff;
-  border-radius: 6px;
-  padding: 32px 40px 20px 32px;
-  box-sizing: border-box;
-  height: 420px;
-  width: 360px;
-}
-
-.card__content {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.card__title {
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 700;
-  margin: 0;
-}
-
-.card__text {
-  margin: 20px 0 0;
-  font-size: 16px;
-  line-height: 24px;
-}
-
-.card__footer {
-  margin: 0;
-  font-size: 14px;
-  line-height: 20px;
-  color: #838383;
-  /* Auto margins applied on a flex item automatically extend specified margin to occupy the extra space in the flex container */
-  /* In our case, this pushes the element down to the bottom */
-  margin-top: auto;
-}
 
 .membership {
   padding-top: 100px;
@@ -324,15 +328,13 @@
   list-style-type: none;
   padding: 0;
   margin: 100px 0 0;
-  /* Add styles */
   display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 40px;
+  justify-content: center;
 }
 
 .step {
-  /* Add styles */
+  flex-wrap: wrap;
   width: 220px;
 }
 
@@ -364,14 +366,14 @@
 }
 
 .about__title {
+  display: flex;
+  padding-right: 120px;
   margin: 0;
   font-size: 20px;
   line-height: 30px;
   font-weight: 500;
-  z-index: 2;
+  z-index: 1;
   max-width: 154px;
-  display: flex;
-  margin-right: 120px;
 }
 
 .about__content {
@@ -379,14 +381,19 @@
   line-height: 30px;
   font-weight: 400;
   max-width: 660px;
-  z-index: 2;
 }
 
 .about__paragraph {
   margin: 0;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 32px;
+  position: relative;
+  padding-bottom: 32px;
+  z-index: 1;
+}
+
+.about__paragraph:last-child {
+  margin: 0;
+  position: relative;
+  padding-bottom: 0px;
 }
 
 .about__circle {
@@ -394,11 +401,10 @@
   width: 495px;
   height: 495px;
   border-radius: 50%;
-  display: flex;
-  z-index: 0;
   position: absolute;
-  left: -91px;
   top: -121px;
+  left: -91px;
+  z-index: 0;
 }
 
 .footer {
