--- a/styles/style.css
+++ b/styles/style.css
@@ -102,6 +102,9 @@
   padding-top: 100px;
   padding-bottom: 140px;
   background-color: #f2f2f2;
+  background-image: url(/images/staff_picks_background.jpg);
+  background-size: auto;
+  background-repeat: no-repeat;
 }
 
 .staff__title {
@@ -109,6 +112,7 @@
   font-size: 44px;
   line-height: 52px;
   margin: 0 0 24px;
+  color: #f2f2f2;
 }
 
 .staff__subtitle {
@@ -117,6 +121,7 @@
   line-height: 30px;
   font-weight: 400;
   margin: 24px 0 68px;
+  color: #f2f2f2;
 }
 
 .staff__cards {
@@ -157,7 +162,6 @@
   margin: 20px 0 0;
   font-size: 16px;
   line-height: 24px;
-  overflow: scroll;
 }
 
 .card__footer {
@@ -174,6 +178,7 @@
   align-items: start;
   justify-content: space-between;
   box-sizing: border-box;
+  background-color: #f2f2f2;
 }
 
 .events__content {
